# rustic-auth

./: .env.stage  Cargo.toml  Dockerfile  Dockerfile.non.protoc  main
_scripts/: build.sh  dev.sh
_scripts/docker/: deploy-local-reg.sh  run.sh  stop-rm-container.sh
migrations/2019-04-12-212641_create_locations/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/auth/: mod.rs
src/location/: mod.rs
