[package]
name = "rustic_auth"
version = "0.1.0"
authors = ["Bryan"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.10"
env_logger = "0.6.1"

actix = "0.7"
actix-web = "1.0.9"
actix-cors = "0.1.0"

nats="*"

serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
json = "*"

base64 = "0.10.1"
url = "1.7.2"
rand = "0.6.5"
oauth2 = "1.3.0"

protobuf = "2.8.1"

httpbis = { git = "https://github.com/stepancheg/rust-http2" }
grpc = { git = "https://github.com/stepancheg/grpc-rust" }
grpc-protobuf = { git = "https://github.com/stepancheg/grpc-rust" }

tls-api = "0.2.0"
tls-api-native-tls = "0.2.0"

futures = "0.1.26"
futures-cpupool = "0.1.8"

rustic_users = { git = "https://github.com/BStenfors/rustic_users" }

[build-dependencies]
protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust" }


